[package]
name = "ruspiro-gpio"
authors = ["André Borrmann <pspwizard@gmx.de>"]
version = "0.4.1" # remember to update html_root_url
description = """
This crates provides a GPIO peripheral abstraction of the Raspberry Pi
"""
license = "Apache-2.0"
repository = "https://github.com/RusPiRo/ruspiro-gpio/tree/v0.4.1"
documentation = "https://docs.rs/ruspiro-gpio/0.4.1"
readme = "README.md"
keywords = ["RusPiRo", "gpio", "baremetal", "raspberrypi"]
categories = ["no-std", "embedded"]
edition = "2018"
exclude = [".travis.yml", "Makefile.toml"]

[badges]
travis-ci = { repository = "RusPiRo/ruspiro-gpio", branch = "master" }
maintenance = { status = "actively-developed" }

[lib]

[dependencies]
ruspiro-singleton = "0.3"
ruspiro-register = "0.4"
ruspiro-interrupt = "0.3"

[features]
ruspiro_pi3 = [
    "ruspiro-interrupt/ruspiro_pi3"
]

[patch.crates-io]
ruspiro-singleton = { git = "https://github.com/RusPiRo/ruspiro-singleton.git" }
ruspiro-register = { git = "https://github.com/RusPiRo/ruspiro-register.git" }
ruspiro-interrupt = { git = "https://github.com/RusPiRo/ruspiro-interrupt.git" }