[package]
name = "ruspiro-gpio"
authors = ["André Borrmann <pspwizard@gmx.de>"]
version = "0.4.2" # remember to update html_root_url
description = """
This crates provides a GPIO peripheral abstraction of the Raspberry Pi
"""
license = "Apache-2.0"
repository = "https://github.com/RusPiRo/ruspiro-gpio/tree/v0.4.1"
documentation = "https://docs.rs/ruspiro-gpio/0.4.1"
readme = "README.md"
keywords = ["RusPiRo", "gpio", "baremetal", "raspberrypi"]
categories = ["no-std", "embedded"]
edition = "2018"
exclude = ["Makefile.toml", ".cargo/config.toml"]

[badges]
maintenance = { status = "actively-developed" }

[lib]

[dependencies]
ruspiro-singleton = "~0.4.2"
ruspiro-mmio-register = "~0.1.2"
ruspiro-interrupt = "~0.4.3"

[features]
ruspiro_pi3 = [
  "ruspiro-interrupt/ruspiro_pi3"
]

[package.metadata.docs.rs]
default-target = "aarch64-unknown-linux-gnu"
features = ["ruspiro_pi3"]

[patch.crates-io]
ruspiro-singleton = { git = "https://github.com/RusPiRo/ruspiro-singleton.git", branch = "development" }
ruspiro-mmio-register = { git = "https://github.com/RusPiRo/ruspiro-mmio-register.git", branch = "development" }